successfully running dev and build tasks

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Web Assassin Alpine.js Boilderplate</title>
-    <link rel="stylesheet" href="bundle.css" />
+    <link rel="stylesheet" href="assets/bundle.min.css">
   </head>
   <body>
 
-    <img src="./assets/sample.jpeg" alt="">
+    <img src="assets/images/sample.jpeg" alt="">
     <!-- This style tag should be removed during development -->
     <style>
       body {
@@ -54,6 +54,6 @@
 
     <a href="/page.html">Another Page</a>
 
-    <script src="bundle.js"></script>
+    <script src="assets/bundle.min.js"></script>
   </body>
 </html>
